--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="rectangle">
                 <em class="txt-rtg">SLACA 2019</em> 
             </div> 
-            <img class="img-logo" src="/img/Logo 400x400_0.png"/>
+            <img class="img-logo" src="./img/Logo 400x400_0.png"/>
             <nav>
               <a href="#">Apresentação</a><br>
               <a href="#">Comitês</a>
@@ -109,9 +109,9 @@
         <section class="discussoes">
           <div class="titulo-discussoes">Discussões</div>
             <h1 class="ideias-e-duvidas">Compartilhe suas ideias ou duvidas com os autores!</h1>
-                <img class="icone1" src="/img/icone1.png"/>
-                <img class="icone2" src="/img/icone2.png"/>
-                <img class="icone3" src="/img/icone3.png"/>
+                <img class="icone1" src="./img/icone1.png"/>
+                <img class="icone2" src="./img/icone2.png"/>
+                <img class="icone3" src="./img/icone3.png"/>
 
             <h2 class="txt-estimulo">Sabia que o maior estímulo no desenvolvimento científico e cultural é a curiosidade?<br>
               Deixe seus questionamentos ou sugestões para o autor!</h2>
