--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
       <h1 class="titulo">Análise sensorial de preparações funcionais desenvolvidas para escolares entre 09 e 15 anos, do município de Campinas/SP </h1>
 
-        <button class="dowload"></button>
-        <button class="favorito"></button>
-        <button class="doi"></button>
+        <button class="dowload">Dowload</button>
+        <button class="favorito">Fav</button>
+        <button class="doi">Doi</button>
 
         <h2 class="como-citar">COMO CITAR ESSE TRABALHO?</h2>
          
