--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <select class="idioma">  
 
-        <option ></option>
+        <option >pt-BR</option>
         <option>en.US</option>  
         <option>es</option>   
 
@@ -73,21 +73,22 @@
 
 <div class="txt-painel"style="overflow:scroll; width:98%; height:88%;">
 
-  Tipo de Apresentação: Pôster</br>
+  Tipo de Apresentação:  Pôster</br>
   Eixo temático: Alimentação e saúde (AS) </br>
-  Palavras-chaves: Alimentos funcionais, alimentação escolar.</br>
+  Palavras-chaves:Alimentos <br> 
+    funcionais, alimentação escolar.</br>
 
-  Autores:</br>
-  Galileo Galilei¹</br>
-  Berta Lange de Morretes²</br>
-  Isaac Newton³</br>
-  Cesar Lattes¹</br>
-  Stephen Hawking⁴</br>
+  Autores:</br></br>
+   Galilei</br>
+  Berta Lange de Morretes</br>
+  Isaac Newton</br>
+  Cesar Lattes</br>
+  Stephen Hawking</br></br>
   
-  ¹Universidade Estadual de Campinas</br>
-  ²Universidade de São Paulo</br>
-  ³Instituto Nacional de Pesquisas Espaciais</br>
-  ⁴Universidade Federal do Rio de Janeiro</br> </h4>
+  Universidade Estadual de Campinas</br>
+  Universidade de São Paulo</br>
+  Instituto Nacional de Pesquisas Espaciais</br>
+  Universidade Federal do Rio de Janeiro</br>
 
 </div>
         </section>
